--- a/0506-rwd/rwd_backgrounds/styles.css
+++ b/0506-rwd/rwd_backgrounds/styles.css
@@ -7,5 +7,25 @@
 .background-switch {
     position: absolute;
     left: 0; top: 0; right: 0; bottom: 0;
-    background: #b80000;
 }
+
+/*mobile*/
+@media (max-width:800px) {
+/*@media all and (max-width:800px) {*/
+    .background-switch {
+        background: green;
+    }
+}
+/*tablet*/
+@media screen and (min-width:801px) and (max-width:1200px) {
+    .background-switch {
+        background:blue;
+    }
+}
+/* desktop */
+@media screen and (min-width:1201px) {
+    .background-switch {
+        background:blue;
+    }
+}
+
