--- a/0506-rwd/rwd_basic/default.css
+++ b/0506-rwd/rwd_basic/default.css
@@ -55,7 +55,8 @@
 	.container
 	{
 		margin: 0px auto;
-		width: 1200px;
+		width: 100%;
+		max-width:1280px;
 	}
 
 
@@ -179,10 +180,14 @@
 	#banner
 	{
 		padding-top: 5em;
+		/*text-align:center;*/
+
 	}
 
 	#banner img {
-		width: 1200px;
+		max-width: 100%;
+		display:block;
+		margin:0 auto;
 	}
 
 /*********************************************************************************/
@@ -225,8 +230,8 @@
 	#footer .fbox
 	{
 		float: left;
-		width: 375px;
-  		margin-right: 36px;
+		width: 32.33%;
+  		margin-right: 1%;
 	}
 
 	#footer .fbox:last-of-type {
