--- a/0506-rwd/rwd_flexible-media/styles.css
+++ b/0506-rwd/rwd_flexible-media/styles.css
@@ -6,3 +6,18 @@
     max-width: 100%;
     border: none;
 }
+
+.flexible-video {
+    margin:0;
+    position:relative;
+    width:100%;
+    padding-bottom:56.25%;
+}
+.flexible-video > iframe {
+    width:100%;
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+}
