--- a/0506-rwd/rwd_columns/styles.css
+++ b/0506-rwd/rwd_columns/styles.css
@@ -18,3 +18,9 @@
 }
 
 /* implement layout degradation (the sidebar goes down) when width < 800px */
+@media (max-width:800px) {
+    .content, .sidebar {
+        width:100%;
+    }
+}
+
