--- a/0506-rwd/rwd_backgrounds/temp.css
+++ b/0506-rwd/rwd_backgrounds/temp.css
@@ -6,7 +6,13 @@
 .background-switch {
     position: absolute;
     left: 0; top: 0; right: 0; bottom: 0;
-    background:green;
+}
+/*mobile*/
+@media (max-width:800px) {
+    /*@media all and (max-width:800px) {*/
+    .background-switch {
+        background: green;
+    }
 }
 /*tablet*/
 @media screen and (min-width:801px) and (max-width:1200px) {
@@ -20,3 +26,4 @@
         background:red;
     }
 }
+
