--- a/0506-rwd/rwd_columns/styles.css
+++ b/0506-rwd/rwd_columns/styles.css
@@ -7,20 +7,17 @@
 }
 .content {
     background: #b80000;
-    float: left;
-    width: 66.6666%;
 }
-
 .sidebar {
     background: #00b800;
-    float: right;
-    width: 33.3333%;
 }
-
-/* implement layout degradation (the sidebar goes down) when width < 800px */
-@media (max-width:800px) {
-    .content, .sidebar {
-        width:100%;
+@media (min-width:800px) {
+    .content {
+        width:66.66%;
+        float:left;
+    }
+    .sidebar {
+        width:33.33%;
+        float:right;
     }
 }
-
